Update edawithpandascheckpoint files

--- a/edawithpandascheckpoint/index.ipynb
+++ b/edawithpandascheckpoint/index.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -444,11 +444,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       121.929825\n",
+       "1       143.819334\n",
+       "2       125.139978\n",
+       "3        81.537566\n",
+       "4       113.739763\n",
+       "           ...    \n",
+       "1455    106.253795\n",
+       "1456    101.302460\n",
+       "1457    113.888889\n",
+       "1458    131.841373\n",
+       "1459    117.436306\n",
+       "Name: price_per_square_ft, Length: 1460, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()\n",
-    "housing_data['price_per_square_ft'] = housing_data['SalePrice']/housing_data['GrLivArea']"
+    "housing_data['price_per_square_ft'] = housing_data['SalePrice']/housing_data['GrLivArea']\n",
+    "housing_data['price_per_square_ft']"
    ]
   },
   {
